--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     const storageKey = 'ms_resource_v2';
     let members = load() || [];
 
-    // Harga per unit resource
+    // Harga per unit resource (stone diubah dari 800 ke 700)
     const PRICES = {
       food: 700,
       wood: 700,
-      stone: 700,
+      stone: 700, // Diubah dari 800 ke 700
       gold: 1000
     };
 
@@ -172,4 +172,4 @@
     render();
   </script>
 </body>
-          </html>
+  </html>
